# ArkLab

./: .gitignore  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
arklab/: __init__.py  __main__.py  analysis.py  cli.py  cost.py  diagnostics.py  drilldown.py  experiments.py  flywheel.py  models.py  recipes.py  reporting.py  text.py  trends.py  web.py
arklab/benchmarks/: __init__.py  enterprise_rag.py  multihop_rag.py  uaeval4rag.py
arklab/embeddings/: __init__.py  ark.py  cache.py
arklab/evaluation/: llm_judge.py  metrics.py  ragas_adapter.py
arklab/providers/: __init__.py  arkcli.py  base.py  factory.py  local.py
arklab/rag/: __init__.py  embedding_retrieval.py  pipeline.py  rerank.py  retrieval.py
arklab/targets/: __init__.py  jvm.py
arklab/trace/: __init__.py  failure_pool.py  writer.py
examples/docs/: arklab.md  rag_metrics.md
examples/evals/: qa.jsonl  synth.jsonl
recipes/: multihop_safe7_prompt_ablation.yaml
tests/: test_cli.py  test_experiments_and_recipes.py  test_flywheel.py  test_japanese_verb_master_target.py  test_pipeline.py  test_reporting_and_diagnostics.py  test_text.py  test_web.py
